# rainforest

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
scripts/: image_build.sh  init.sh  run.sh  test.sh
src/core/: inject_default_kwargs.py
src/services/: fs_storage.py  shufersal_stores_collector.py
src/shufersal/collectors/stores/: main.py
src/tests/: conftest.py
src/tests/data/: stores.html  stores.xml
src/tests/services/: test_shufersal_stores_collector.py
src/utils/: defaults.py  stores.py
