[project]
name = "rainforest"
version = "0.1.0"
description = "muhahahaha"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Shadow Hite Ghost", email = "shadowhiteghost@localhost.ai" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.32.5",
    "beautifulsoup4>=4.15.0",
    "botasaurus>=4.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.21",
    "pre-commit>=4.6.0",
]
test = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 80

[tool.ruff.lint]
# Best Practice: Explicitly opt into specific rulesets
select = [
    "E",   # pycodestyle errors (standard formatting/style bugs)
    "W",   # pycodestyle warnings
    "F",   # Pyflakes (detects unused imports, undefined variables)
    "I",   # isort (automatically sorts your imports alphabetically)
    "C90", # McCabe complexity (keeps functions short and sweet)
    "UP",  # pyupgrade (suggests modern syntax upgrades automatically)
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.pytest.ini_options]
testpaths = ["src/tests"]
pythonpath = ["."]

python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = [
    "**/test_*.py",
    "**/*_test.py",
    "tests/*",
    "src/utils/defaults.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
